refactor: improve readBytes() method in FileSystem.File by using BufferedInputStream universally instead of InputStream on JAR and Files.readAllBytes() on everything else